[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asx-mcp-agent"
version = "0.1.0"
description = "MCP tool for Yahoo Finance chart capture, Word/PDF generation, and Apple Mail send"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.0.0,<2.0.0",
  "playwright>=1.49.0",
  "python-docx>=1.1.2",
  "docx2pdf>=0.1.8",
]

[project.scripts]
asx-mcp-server = "asx_mcp.server:main"
asx-report-cli = "asx_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]